<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Karsa Nusa</string>

    <string name="title_welcome">Welcome to KarsaNusa!</string>
    <string name="title_community">Community</string>
    <string name="title_profile">Profile</string>
    <string name="title_home">Home</string>

    <!-- Text Register -->
    <string name="title_register">Register</string>
    <string name="title_register_page">Create Account</string>
    <string name="message_register_page">Tell Us About Yourself</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_password">Confirm Password</string>

    <!-- Password -->
    <string name="password_error_message">Password must be at least 8 characters</string>

    <!-- Text Login -->
    <string name="title_login">Login</string>
    <string name="title_login_page">Log In Now</string>
    <string name="message_login_page">Enter Your Email and Password</string>
    <string name="hypertext">Don\'t have an account? </string>
    <string name="hypertext_spanned">Register Now</string>

    <!-- Hint Auth -->
    <string name="hint_name">Enter Your Name</string>
    <string name="hint_email">Enter Your Email</string>
    <string name="hint_password">Enter Your Password</string>
    <string name="hint_re_password">Re-enter Your Password</string>

    <!-- Button Auth -->
    <string name="button_login_text_enabled">Log In</string>
    <string name="button_login_text_disabled">Log In</string>
    <string name="button_register_text_enabled">Register</string>
    <string name="button_register_text_disabled">Register</string>

    <!-- Dialog Login-->
    <string name="login_success_title">Yeah!</string>
    <string name="login_success_message">"You successfully logged in as %1$s. "</string>
    <string name="login_success_positive_button">Continue</string>
    <string name="login_error_title">Oops!</string>
    <string name="login_error_message_email_used">The email/password for %1$s is incorrect! Please try again.</string>
    <string name="login_error_positive_button">Try Again</string>

    <!-- Dialog Register -->
    <string name="register_success_title">Yeah!</string>
    <string name="register_success_message">An account with the email %1$s is now ready. Let\'s log in to the app.</string>
    <string name="register_success_positive_button">Continue</string>
    <string name="register_error_title">Oops!</string>
    <string name="register_error_message_email_used">The email %1$s is already in use. Please try another email.</string>
    <string name="register_error_positive_button">Try Again</string>
    <string name="empty_field_error">Please fill in all fields</string>

    <string name="button_show_all">Show More</string>
    <string name="button_signout">Sign Out</string>
    <string name="button_theme">Theme</string>

    <string name="content_description_item_carousel_image">This is a carousel item image</string>
    <string name="content_description_fragment_profile_image">This is the profile picture</string>

    <string name="text_scan">Snapshot Result</string>
    <string name="text_result">Detection Result</string>
    <string name="text_description">Description</string>
    <string name="label">Label\n</string>
    <string name="hint_username">Name\n</string>

    <!-- Welcome -->
    <string name="title_menu_1">Welcome!</string>
    <string name="desc_menu_1">Our app is a platform to discover and explore the rich cultural heritage from various regions across Indonesia.</string>
    <string name="title_menu_2">About Us</string>
    <string name="desc_menu_2">Heritage was created to promote cultural tourism and provide a platform for people to connect with their roots.</string>
    <string name="title_menu_3">Get Started</string>
    <string name="desc_menu_3">Let’s Get Started! Now that you know more about us, let’s begin your journey through cultural heritage.</string>
    <string name="begin">Start</string>
    <string name="logout">Logout</string>

    <integer-array name="carousel_images">
        <item>@drawable/a</item>
        <item>@drawable/b</item>
        <item>@drawable/c</item>
        <item>@drawable/d</item>
    </integer-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_load_failed">Error in uploading image</string>
    <string name="image_classifier_failed">Error in classifying images</string>
    <string name="cancel">Back</string>
    <string name="done">Done</string>
    <string name="analyze_confirmation">Are you sure want to go back?</string>
    <string name="failed_to_load_news">Fail to retrieve news</string>
    <string name="unavailable_news">No current news</string>
    <string name="failed_detection">Fail to detect</string>
    <string name="success_detection">Success to detect</string>
    <string name="invalid_email_error">Email is wrong</string>
    <string name="password_complexity_error_message">Password must contains at least 8 characters, including capital letter, small letter, and number</string>
    <string name="email_format_error_message">Email format must be right, e.g. aa@example.com</string>
    <string name="read_more">Read more</string>
    <string name="image">Picture</string>
    <string name="mulaiScan">Come on, start scanning batik!</string>
    <string name="kamera">Camera</string>
    <string name="galeri">Gallery</string>
    <string name="deteksi">Detection</string>
    <string name="textview">TextView</string>
    <string name="hasil_deteksi">Detection Result</string>
    <string name="feature">Feature</string>
    <string name="wayang_n_under_development">Wayang\n(Under Development)</string>
    <string name="culture_news">Culture News</string>
    <string name="batik">Batik</string>
    <string name="nama_batik">Batik Name</string>
    <string name="tingkat_kepercayaan">Confidence Score</string>
    <string name="kamuBisa">You can take picture\nfrom camera or gallery</string>
    <string name="button_languange">Languange</string>
    <string name="profileName">C242-PS428</string>
    <string name="karsa_nusa">Karsa Nusa</string>
</resources>
