<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    android:background="@color/background_main"
    tools:context=".view.ui.profile.ProfileFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_image_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/profile_image_container2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                app:cardCornerRadius="99dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/content_description_fragment_profile_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_logo" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/profile_username"
                android:ellipsize="end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/karsa_nusa"
                android:fontFamily="@font/poppins_bold"
                android:textSize="20sp"
                android:textColor="@color/text_primary"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/profile_image_container2"
                app:layout_constraintTop_toTopOf="@+id/profile_image_container2" />

            <TextView
                android:id="@+id/profile_email"
                android:ellipsize="end"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/profileName"
                android:fontFamily="@font/poppins_bold"
                android:textSize="16sp"
                android:textColor="@color/text_primary"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="@+id/profile_username"
                app:layout_constraintStart_toStartOf="@+id/profile_username"
                app:layout_constraintTop_toBottomOf="@+id/profile_username" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonProfileTheme"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:gravity="start|center_vertical"
        android:text="@string/button_theme"
        android:textSize="18sp"
        android:textColor="@color/text_primary"
        android:fontFamily="@font/poppins_bold"
        android:drawableLeft="@drawable/ic_theme"
        app:layout_constraintEnd_toEndOf="@+id/profile_image_container"
        app:layout_constraintStart_toStartOf="@+id/profile_image_container"
        app:layout_constraintTop_toBottomOf="@+id/profile_image_container" />

    <Button
        android:id="@+id/buttonProfileSignOut"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:gravity="start|center_vertical"
        android:text="@string/button_signout"
        android:textSize="18sp"
        android:textColor="@color/text_primary"
        android:fontFamily="@font/poppins_bold"
        android:drawableLeft="@drawable/ic_logout"
        app:layout_constraintEnd_toEndOf="@+id/profile_image_container"
        app:layout_constraintStart_toStartOf="@+id/profile_image_container"
        app:layout_constraintTop_toBottomOf="@+id/buttonProfileTheme" />


</androidx.constraintlayout.widget.ConstraintLayout>
